# speetchai-pydantic-ai-nova

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: workflow.yml
ptest/: test.py
src/pydantic_ai_nova/: __init__.py  nova.py
