[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydantic-ai-nova"
version = "0.1.0"
authors = [
  { name="Bilal Ahmed", email="ba@speetch.ai" },
]
description = "Amazon Bedrock Nova model integration for pydantic-ai"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic-ai>=0.1.0",
    "boto3>=1.28.0",
]

[project.urls]
"Homepage" = "https://github.com/speetchai/speetchai-pydantic-ai-nova"
"Bug Tracker" = "https://github.com/speetchai/speetchai-pydantic-ai-nova/issues" 
